# routes/auth.go
@@ -1,8 +1,9 @@
 package routes
 
 import (
-	"github.com/gin-gonic/gin"
 	"github.com/chienduynguyen1702/vcs-sms-be/factory"
+
+	"github.com/gin-gonic/gin"
 )
 
 func setupGroupAuth(r *gin.RouterGroup) {
@@ -10,7 +11,7 @@ func setupGroupAuth(r *gin.RouterGroup) {
 	authGroup := r.Group("/auth")
 	{
 		authGroup.POST("/login", authController.Login)
-		// authGroup.POST("/register", authController.Register)
+		authGroup.POST("/register", authController.Register)
 		// authGroup.GET("/validate", middleware.RequiredAuth, authController.Validate)
 		// authGroup.POST("/logout", middleware.RequiredAuth, authController.Logout)
 	}
